[gd_scene load_steps=12 format=2]

[ext_resource path="res://games/pixel_side_scroller/pawns/pawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://games/pixel_side_scroller/pawns/character/character.png" type="Texture2D" id=2]
[ext_resource path="res://games/pixel_side_scroller/pawns/character/character.gd" type="Script" id=3]
[ext_resource path="res://games/pixel_side_scroller/sounds/sfx/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://games/pixel_side_scroller/sounds/sfx/step.wav" type="AudioStream" id=5]
[ext_resource path="res://games/pixel_side_scroller/sounds/sfx/jump_land.wav" type="AudioStream" id=6]
[ext_resource path="res://games/pixel_side_scroller/sounds/sfx/jump.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 16 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4, 0.6 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 16, 0, 16, 16 ), Rect2( 32, 0, 16, 16 ), Rect2( 48, 0, 16, 16 ), Rect2( 64, 0, 16, 16 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Sounds/StepSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PackedFloat32Array( 0, 0.4 )
}

[sub_resource type="Animation" id=3]
resource_name = "stand"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 16 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
size = Vector2( 3.94, 7.5 )

[node name="Character" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 1 )
anims/run = SubResource( 2 )
anims/stand = SubResource( 3 )

[node name="CollisionShape2D" parent="." index="4"]
position = Vector2( 0, -7.5 )
shape = SubResource( 4 )

[node name="Sounds" type="Node" parent="." index="5"]

[node name="LandSound" type="AudioStreamPlayer" parent="Sounds" index="0"]
stream = ExtResource( 6 )
volume_db = -2.0

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds" index="1"]
stream = ExtResource( 7 )
volume_db = -8.0

[node name="HitSound" type="AudioStreamPlayer" parent="Sounds" index="2"]
stream = ExtResource( 4 )

[node name="StepSound" type="AudioStreamPlayer" parent="Sounds" index="3"]
stream = ExtResource( 4 )
